[project]
name = "currency-exchange-tg-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Gevorji",email = "techno9882@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "aiohttp (>=3.11.18,<4.0.0)",
    "python-telegram-bot (>=22.0,<23.0)",
    "currency_exchange_fapi_client @ git+https://github.com/gevorji/currency-exchange-fapi-client.git"

]

[tool.poetry]
packages = [{include = "currency_exchange_tg_bot", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
